--- a/UI/pages/send.html
+++ b/UI/pages/send.html
@@ -22,7 +22,7 @@
     </div>
 
   </div>
-  <a id='current_user' style="color:chartreuse;     font-size: 30px;"></a>
+  <a id='current_user' style="color:chartreuse; font-size: 30px;"></a>
 
   <a href="send.html">Send parcel</a>
   <a href="search.html">Book</a>
@@ -36,13 +36,116 @@
     <h1>Send parcels</h1>
     <form name="sendit" id="send">
       <input type="text" name="title" placeholder="Title" required>
-      <input type="text" name="pickup" placeholder="Pickup" required>
+      <input list="hosting" type="text" name="pickup" placeholder="Pickup" required>
       <input type="text" name="rec_id" placeholder="Receiver ID" required>
       <input type="number" name="rec_phone" placeholder="Receiver Phone Number" required>
       <input type="text" name="rec_name" placeholder="Receiver Name" required>
-      <input type="text" name="destination" placeholder="Destination" required>
+      <input list="hosting" type="text" name="destination" placeholder="Destination" required>
       <input type="number" name="weight" placeholder="Weight" required>
       <button type='submit' id="submit">Send IT</button>
+
+      <datalist id="hosting">
+        <option value="Nairobi" />
+        <option value="Mombasa"/>
+        <option value="Kisumu" />
+        <option value="Nakuru" />
+        <option value="Eldoret" />
+        <option value="Kehancha"/>
+        <option value="Ruiru" />
+        <option value="Kikuyu" />
+        <option value="Kangundo-Tala" />
+        <option value="Malindi" />
+        <option value="Naivasha" />
+        <option value="Kitui"/>
+        <option value="Machakos" />
+        <option value="Thika" />
+        <option value="Athi River"/>
+        <option value="Karuri" />
+        <option value="Nyeri"/>
+        <option value="Kilifi"/>
+        <option value="Garissa" />
+        <option value="Vihiga" />
+        <option value="Mumias" />
+        <option value="Bomet"/>
+        <option value="Molo"/>
+        <option value="Ngong"/>
+        <option value="Kitale"/>
+        <option value="Litein"/>
+        <option value="Limuru"/>
+        <option value="Kericho"/>
+        <option value="Kimilili"/>
+        <option value="Awasi"/>
+        <option value="Kakamega"/>
+        <option value="Kapsabet"/>
+        <option value="Mariakani"/>
+        <option value="Kiambu"/>
+        <option value="Mandera"/>
+        <option value="Nyamira"/>
+        <option value="Mwingi"/>
+        <option value="Kisii"/>
+        <option value="Wajir"/>
+        <option value="Rongo"/>
+        <option value="Bungoma"/>
+        <option value="Ahero"/>
+        <option value="Nandi Hills"/>
+        <option value="Makuyu"/>
+        <option value="Kapenguria"/>
+        <option value="Taveta"/>
+        <option value="Narok"/>
+        <option value="Ol Kalou"/>
+        <option value="Kakuma"/>
+        <option value="Webuye"/>
+        <option value="Malaba"/>
+        <option value="Mbita Point"/>
+        <option value="Ukunda"/>
+        <option value="Wundanyi"/>
+        <option value="Busia"/>
+        <option value="Runyenjes"/>
+        <option value="Migori"/>
+        <option value="Malava"/>
+        <option value="Suneka"/>
+        <option value="Embu"/>
+        <option value="Ogembo"/>
+        <option value="Homa Bay"/>
+        <option value="Lodwar"/>
+        <option value="Kitengela"/>
+        <option value="Ukwala"/>
+        <option value="Keroka"/>
+        <option value="Meru"/>
+        <option value="Matuu"/>
+        <option value="Oyugis"/>
+        <option value="Nyahururu"/>
+        <option value="Kipkelion"/>
+        <option value="Luanda"/>
+        <option value="Nanyuki"/>
+        <option value="Maua"/>
+        <option value="Mtwapa"/>
+        <option value="Isiolo"/>
+        <option value="Eldama Ravine"/>
+        <option value="Voi"/>
+        <option value="Siaya"/>
+        <option value="Nyansiongo"/>
+        <option value="Londiani"/>
+        <option value="Iten/Tambach"/>
+        <option value="Chuka"/>
+        <option value="Malakisi"/>
+        <option value="Juja"/>
+        <option value="Ongata Rongai"/>
+        <option value="Bondo"/>
+        <option value="Moyale"/>
+        <option value="Maralal"/>
+        <option value="Gilgil"/>
+        <option value="Nambale"/>
+        <option value="Tabaka"/>
+        <option value="Muhoroni"/>
+        <option value="Kerugoya/Kutus"/>
+        <option value="Ugunja"/>
+        <option value="Yala"/>
+        <option value="Rumuruti"/>
+        <option value="Burnt Forest"/>
+        <option value="Maragua"/>
+        <option value="Kendu Bay"/>
+    </datalist>
     </form>
 
   </div>
