--- a/UI/pages/send.html
+++ b/UI/pages/send.html
@@ -34,7 +34,7 @@
   <div class="new_delivery1">
       <h3 id="errors"></h3>
     <h1>Send parcels</h1>
-    <form name="sendit" id="send">
+    <form name="sendit" id="submit">
       <input type="text" name="title" placeholder="Title" required>
       <input list="hosting" type="text" name="pickup" placeholder="Pickup" required>
       <input type="text" name="rec_id" placeholder="Receiver ID" required>
