--- a/UI/pages/dashboard.html
+++ b/UI/pages/dashboard.html
@@ -16,6 +16,7 @@
       <a href="profile.html">Profile</a>
       <a href="book.html">Bookings</a>
       <a href="my_order.html">Delivery Orders</a>
+      <a href="payments.html">Payments</a>
       <a href="history-delivery.html">Delivery Histories</a>
       <hr/>
 			<a href="../../index.html">Logout</a>
