--- a/UI/pages/admin_dashboard.html
+++ b/UI/pages/admin_dashboard.html
@@ -29,6 +29,7 @@
   <a href="dates.html">Day's books</a>
   <a href="delivery_orders.html">Delivery Orders</a><br/>
   <a href="history_orders.html">Bookings Orders</a><br/>
+  <a href="payment_admin.html">Payments</a>
   <a href="intransit.html">InTransit</a><br/>
   <a href="delivered.html">Delivered</a><br/>
   <a href="canlced.html">Canceled</a><br/>
