--- a/UI/pages/payment_admin.html
+++ b/UI/pages/payment_admin.html
@@ -26,7 +26,7 @@
 
 <div class="contianer">
     <h3 id="reg"></h3>
-  <h1>Your payments</h1>
+  <h1>Check payments</h1>
   
 </br> 
   <div id="showsearch"></div>
