Create print data page

--- a/UI/pages/printdata.html
+++ b/UI/pages/printdata.html
@@ -71,7 +71,7 @@
     <!--/.Navbar-->
 <div class="contianer">
       <h3 id="reg"></h3>
-    <h1>Your payments</h1>
+    <h1>Print Your Receipt</h1>
     
   </br> 
     <div id="showsearch"></div>
