Add cash print reciepts

--- a/UI/pages/printcash.html
+++ b/UI/pages/printcash.html
@@ -119,7 +119,7 @@
 
 
 
-<script src="../js/printdata.js"></script>
+<script src="../js/printcash.js"></script>
 <script src="../js/print.min.js"></script>
 
 <!-- <script src="../js/script.js"></script> -->
