--- a/UI/pages/search.html
+++ b/UI/pages/search.html
@@ -52,10 +52,8 @@
             <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">MY MENU</a>
             <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="book.html">Bookings</a>
-              <a class="dropdown-item" href="my_order.html">Delivery Orders</a>
-              <a class="dropdown-item" href="history-delivery.html">Delivery Histories</a>
-              <a class="dropdown-item" href="payments.html">Payments</a>
+              <a class="dropdown-item" href="payments.html">Bookings</a>
+              <a class="dropdown-item" href="my_order.html">Deliveries</a>
               <a class="dropdown-item" href="profile.html">Profile</a>
               <a class="dropdown-item" href="#">Logout</a>
   
