Changes on navbar

--- a/UI/pages/admin_dashboard.html
+++ b/UI/pages/admin_dashboard.html
@@ -56,15 +56,13 @@
 
 
 <nav class="navbar1 navbar-expand navbar-dark white static-top font-weight-bold">
-  <i class="fas fa-search-dollar"></i><a href="bookers.html">Cash</a>&nbsp;&nbsp; 
-  <i class="fas fa-search-dollar"></i><a href="searchpay.html">Mpesa </a>&nbsp;&nbsp; 
+  <a href="bookers.html" class="btn btn-outline-default waves-effect">Cash</a>&nbsp;&nbsp; 
+  <a href="searchpay.html" class="btn btn-outline-primary waves-effect">Mpesa </a>&nbsp;&nbsp; 
+  <a href="payment_admin.html" class="btn btn-outline-success waves-effect">Payments</a>&nbsp;&nbsp; 
+  <a href="intransit.html" class="btn btn-outline-info waves-effect">Parcels Details</a>&nbsp;&nbsp; 
 
-  <i class="fab fa-searchengin"></i><a href="dates.html">Search By Date</a>&nbsp;&nbsp; 
-  <i class="fas fa-dollar-sign"></i><a href="payment_admin.html">Payments</a>&nbsp;&nbsp; 
-  <i class="fab fa-galactic-senate"></i><a href="intransit.html">Parcels Details</a>&nbsp;&nbsp; 
-
-  <i class="fas fa-biohazard"></i><a href="charts.html">Analıysıs</a>&nbsp;&nbsp; 
-  <i class="fas fa-sms"></i><a href="sms.html">SMS</a>&nbsp;&nbsp; 
+  <a href="charts.html" class="btn btn-outline-warning waves-effect">Analıysıs</a>&nbsp;&nbsp; 
+  <a href="sms.html" class="btn btn-outline-danger waves-effect">SMS</a>&nbsp;&nbsp; 
   </nav>
 <body onload="fetchnumbers()">
 <br/>
