--- a/UI/pages/admin_dashboard.html
+++ b/UI/pages/admin_dashboard.html
@@ -59,9 +59,11 @@
   <a href="bookers.html" class="btn btn-outline-default waves-effect">Cash</a>&nbsp;&nbsp; 
   <a href="searchpay.html" class="btn btn-outline-primary waves-effect">Mpesa </a>&nbsp;&nbsp; 
   <a href="payment_admin.html" class="btn btn-outline-success waves-effect">Payments</a>&nbsp;&nbsp; 
-  <a href="intransit.html" class="btn btn-outline-info waves-effect">Parcels Details</a>&nbsp;&nbsp; 
-
+  <a href="intransit.html" class="btn btn-outline-info waves-effect">Parcels</a>&nbsp;&nbsp; 
   <a href="charts.html" class="btn btn-outline-warning waves-effect">Analıysıs</a>&nbsp;&nbsp; 
+
+  <a href="cashflow.html" class="btn btn-outline-default waves-effect">Cash Flow</a>&nbsp;&nbsp; 
+
   <a href="sms.html" class="btn btn-outline-danger waves-effect">SMS</a>&nbsp;&nbsp; 
   </nav>
 <body onload="fetchnumbers()">
