Fetch cash flow data

--- a/UI/pages/admin_dashboard.html
+++ b/UI/pages/admin_dashboard.html
@@ -37,11 +37,9 @@
   <!-- Links -->
   <a id='current_user' style="color:chartreuse;font-size: 30px;"></a>
 
-  <i class="fab fa-btc"></i>&nbsp;&nbsp; <a href="today_clients.html">Clients</a>  &nbsp;&nbsp;&nbsp;&nbsp;
-  <i class="fab fa-btc"></i>&nbsp;&nbsp; <a href="desk.html">Desk Customers</a>  &nbsp;&nbsp;&nbsp;&nbsp;
+  <i class="fab fa-btc"></i>&nbsp;&nbsp; <a href="today_clients.html">Reception Desk</a>  &nbsp;&nbsp;&nbsp;&nbsp;
 
   <i class="far fa-calendar-plus"></i>&nbsp;&nbsp; <a href="create_price.html">Create Price</a>  &nbsp;&nbsp;&nbsp;&nbsp;
-  <i class="fab fa-btc"></i>&nbsp;&nbsp; <a href="bookingcustomer.html"> Bookings Passengers</a>  &nbsp;&nbsp;&nbsp;&nbsp;
 
   <i class="fas fa-sign-out-alt"></i> &nbsp;&nbsp;<a href="#">Logout</a>  
 
