--- a/UI/pages/search.html
+++ b/UI/pages/search.html
@@ -80,12 +80,18 @@
           <input list="hosting"  type="text" name="from_location" placeholder="From ........">
         </div>
       </div>
-        <div class="col">
+      <div class="col">
             <div class="md-form mt-0">
 
          <input list="hosting" type="text" name="to_location" placeholder="To ............">
       </div>
+      <div class ="col">
+
+        in
       </div>
+
+      </div>
+
          <datalist id="hosting">
           <option value="nairobi" />
           <option value="mombasa"/>
