--- a/UI/pages/pricing.html
+++ b/UI/pages/pricing.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,7 +33,7 @@
        </li>
       
        <li class="nav-item" style="color: #ffffff; font-weight: 500;">
-         <a class="nav-link" href="pricing.html">Pricing</a>
+         <a class="nav-link" href="./UI/pages/pricing.html">Pricing</a>
        </li>
      </ul>
      <!-- Links -->
@@ -50,47 +49,16 @@
    <!-- Collapsible content -->
  </nav>
  <!--/.Navbar-->
-  <br/><br/><br/><br/>
-
-
+<br><br><br>
+ <section class="dis">
+   
 <div class="container">
-  <div class="row">
-  
-    <div class="col-md-6">
-      <img src="../img/edit2.png" class="img-fluid" alt="Responsive image">
-     </div>
-
- <div class="col-md-6">
-   <h2 id="reg"></h2>
- <div id="logbox">
-  <h4 id="loginMsg"></h4>
-  <div class="row">
-    <div class="col-2">
-    <i class="fas fa-check-circle fa-2x indigo-text"></i>
-    </div>
-    <div class="col-10">
-      <h2 class="font-weight-bold" style="color: #00c851!important;">Login</h2>
-      <div style="height:15px"></div>
-    </div>
-  </div>
-
-  <form name="login" id="loginform">
-  <input type="text" name="username" placeholder="Username" autofocus="autofocus" required="required" class="input pass"/>
-
-     <input type="password" name="password" placeholder="Password" required="required" class="input pass"/>
-
-  <input type="submit" id="submit" value="Login me in!" class="inputButton"/>
-     <div class="text-center">
-      <a href="register.html" style="font-weight: 500; font-size: 16px;;">Don't have an account? Sign up</a><br/>
-      <a href="" style="font-weight: 500; font-size: 16px;;">Forgot password?</a>
-     </div>
-   </form>
- </div>
+    <h2 class=" h3 text-center" style="color: #FF8800
+    ;  font-size: 2em; font-weight: 600;">OUR PRICING</h2>
+    <br>
+    <div id="shows"></div>
 </div>
-</div>
-</div>
-
-
+</section>
 <!-- Footer -->
 <footer class="page-footer font-small mdb-color darken-4
 pt-4">
@@ -120,9 +88,8 @@ pt-4">
 
 </footer>
 <!-- Footer -->
+<script src="../js/pricing.js"></script>
 
-<script src="../js/login.js"></script>
-<!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!-- Bootstrap tooltips -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
@@ -131,8 +98,5 @@ pt-4">
 <!-- MDB core JavaScript -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"></script>
 
-
 </body>
-</html> 
-
 </html> 
