--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        </li>
       
        <li class="nav-item" style="color: #ffffff; font-weight: 500;">
-         <a class="nav-link" href="#">Pricing</a>
+         <a class="nav-link" href="./UI/pages/pricing.html">Pricing</a>
        </li>
      </ul>
      <!-- Links -->
